--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Project Loom? Better Futures? <span class="c2" style="font-size: xx-large">What's next for concurrent programming on the JVM</span>
             </h3>
             <br/>
-            <p>Adam Warski, SoftwareMill</p>
+            <p>Adam Warski (@adamwarski), SoftwareMill</p>
             <p>JavaSummit, August 1st, 2020</p>
             <img src="https://files.softwaremill.com/logo/logo_white.png" alt="sml logo"
                  style="height: 180px; margin: 0 auto 4rem auto; background: transparent;">
@@ -705,7 +705,7 @@ def lookupValue(key: String): IO[Int] = {
 
             <ul>
                 <li><a href="https://adamw.github.io/loom-pres/">This presentation</a></li>
-                <li><a href="https://twitter.com/adamwarski">Twitter</a></li>
+                <li><a href="https://twitter.com/adamwarski">Twitter</a> (@adamwarski)</li>
                 <li><a href="https://blog.softwaremill.com">Blog</a></li>
             </ul>
 
